# Elysia

./: .dockerignore  .editorconfig  .env  .env.example  .env_template  .gitignore  .pre-commit-config.yaml  2F_Observation_Lens.py  3F_EM_World_Waterways.md  ADVANCED_SYSTEMS_PHASE5.md  AGENTS.md  AGENT_DIRECTIVE.md  AGENT_GUIDE.md  ARCHITECTURE.md  ARCHITECT_MANIFESTO.md  AUTONOMOUS_GROWTH_ROADMAP.md  Atlantis_10_Layer_Matrix.md  Atlantis_Phase_Modulation_Decoder.md  BENCHMARK_SUMMARY.md  BUILDER_LOG.md  CMakeLists.txt  CODEX.md  CODE_QUALITY.md  DOCUMENTATION_INDEX.md  DOCUMENT_STRUCTURE.md  Dockerfile  ELYSIA_ARCHITECTURAL_AUDIT.md  ELYSIA_CAPABILITY_EVALUATION.md  ELYSIA_CRADLE_ARCHITECTURE.md  ELYSIA_EVALUATION_REPORT.md  ELYSIA_NEURON_RESONANCE_LOG.md  ELYSIA_PRESENCE.md  ELYSIA_TENSION_LOG.md  ELYSIA_WORLD_ENGINE.md  EXPERIMENT_DESIGN_GUIDE.md  EXPLANATION_FOR_DAD.md  FINAL_REPORT.md  FINAL_REPORT_KR.md  FRACTAL_COMMUNICATION_SUMMARY.md  FRACTAL_QUANTIZATION_SUMMARY.md  (+383 more)
.antigravity/: rules.md
.ipynb_checkpoints/: start-checkpoint.sh
.jules/: AGENT_PROTOCOL.md  bolt.md
Archive/: ELYSIA_CHRONICLE.md  Lightning_Path_Protocol.md  simulation_output.txt  test_neural_bridge.py  test_out.txt  test_semantic_forager.py  test_systemic_optimizations.py
Core/: CLI  CODEX.md  Elysia.py  Kernel.py  KernelAxis.py  Namespace.py  README.md  world.py  (+1 more)
elysia_core_poc/: .gitignore  CMakeLists.txt  fractal_mirror.cpp  fractal_mirror.h  main.cpp  phase_transformer.cpp  phase_transformer.h  static_context_bridge.cpp  static_context_bridge.h  stator_dynamics.cpp  stator_dynamics.h
(+32877 files in other folders)
